syntax = "proto3";

option csharp_namespace = "Protos.Authorization";

package authorization;

import "Entities/ActionRights.proto";

service Authorization {
  rpc getAllRights (GetAllRightsRequest) returns (GetAllRightsResponse);
}

message GetAllRightsRequest {
    string UserId = 1;
}

message GetAllRightsResponse {
  repeated shared.ActionRights ActionRights = 1;
}
