syntax = "proto3";

option csharp_namespace = "Protos.ActionRights.GetActionRights";

package getactionrights;

message GetActionRightsRequest {
  string Id = 1;
}